--- a/Memorama_Project-master/Memorama.csproj
+++ b/Memorama_Project-master/Memorama.csproj
@@ -113,14 +113,19 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="Model\Correo.cs" />
     <Compile Include="Model\Jugador.cs" />
-    <Compile Include="Model\Logic.cs" />
+    <Compile Include="Model\Correo.cs" />
     <Compile Include="Pages\ConfirmarCuentaPG.xaml.cs">
       <DependentUpon>ConfirmarCuentaPG.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\IniciarSesionPG.xaml.cs">
+      <DependentUpon>IniciarSesionPG.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\RecuperarPassPg.xaml.cs">
       <DependentUpon>RecuperarPassPg.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\RegistroUsuarioPG.xaml.cs">
+      <DependentUpon>RegistroUsuarioPG.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <DependentUpon>Resources.resx</DependentUpon>
@@ -133,9 +138,13 @@
     <Compile Include="Windows\Inicio.xaml.cs">
       <DependentUpon>Inicio.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Windows\RegistroWin.xaml.cs">
-      <DependentUpon>RegistroWin.xaml</DependentUpon>
+    <Compile Include="Windows\CuadroDialogo.xaml.cs">
+      <DependentUpon>CuadroDialogo.xaml</DependentUpon>
     </Compile>
+    <Page Include="Languages\Mensajes.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -152,7 +161,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\IniciarSesionPG.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\RecuperarPassPg.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\RegistroUsuarioPG.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -164,7 +181,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Windows\RegistroWin.xaml">
+    <Page Include="Windows\CuadroDialogo.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -204,7 +221,7 @@
     <None Include="Connected Services\DataAccessService\item2.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\DataAccessService\Memorama.DataAccessService.JugadorSet.datasource">
+    <None Include="Connected Services\DataAccessService\Memorama.DataAccessService.Jugador.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="packages.config" />
@@ -244,7 +261,6 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
