Separacion de cliente - servidor

--- a/Memorama_Project-master/App.config
+++ b/Memorama_Project-master/App.config
@@ -29,11 +29,25 @@
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
+                <binding name="NetTcpBinding_IChatService">
+                    <security>
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
             </netTcpBinding>
         </bindings>
 
       <client>
-        <endpoint address="net.tcp://localhost:8090/DataAccessService" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IDataAccessService" contract="DataAccessService.IDataAccessService" name="NetTcpBinding_IDataAccessService">
+        <endpoint address="net.tcp://localhost:8090/DataAccessService"
+          binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IDataAccessService"
+          contract="DataAccessService.IDataAccessService" name="NetTcpBinding_IDataAccessService">
+          <identity>
+            <userPrincipalName value="LUISMOGA\Luis Manuel" />
+          </identity>
+        </endpoint>
+        <endpoint address="net.tcp://localhost:8091/DataAccessService"
+          binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IChatService"
+          contract="ChatService.IChatService" name="NetTcpBinding_IChatService">
           <identity>
             <userPrincipalName value="LUISMOGA\Luis Manuel" />
           </identity>
