--- a/Memorama_Project-master/Memorama.csproj
+++ b/Memorama_Project-master/Memorama.csproj
@@ -93,6 +93,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Connected Services\ChatService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Connected Services\DataAccessService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -117,6 +122,9 @@
     <Compile Include="Model\Correo.cs" />
     <Compile Include="Pages\ConfirmarCuentaPG.xaml.cs">
       <DependentUpon>ConfirmarCuentaPG.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\CrearPartidaPG.xaml.cs">
+      <DependentUpon>CrearPartidaPG.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\IniciarSesionPG.xaml.cs">
       <DependentUpon>IniciarSesionPG.xaml</DependentUpon>
@@ -158,6 +166,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Pages\ConfirmarCuentaPG.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\CrearPartidaPG.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -211,6 +223,22 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Connected Services\ChatService\ChatService.wsdl" />
+    <None Include="Connected Services\ChatService\item.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ChatService\item1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ChatService\item2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ChatService\Memorama.ChatService.ChatMessage.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ChatService\Memorama.ChatService.ChatUser.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Connected Services\DataAccessService\DataAccessService.wsdl" />
     <None Include="Connected Services\DataAccessService\item.xsd">
       <SubType>Designer</SubType>
@@ -244,6 +272,7 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\ChatService\" />
     <WCFMetadataStorage Include="Connected Services\DataAccessService\" />
   </ItemGroup>
   <ItemGroup>
@@ -257,6 +286,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Connected Services\DataAccessService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ChatService\item.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ChatService\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ChatService\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ChatService\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
