Muchas cosas actualizadas

--- a/Memorama_Project-master/App.config
+++ b/Memorama_Project-master/App.config
@@ -34,6 +34,11 @@
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
+                <binding name="NetTcpBinding_IPartidaService">
+                    <security>
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
             </netTcpBinding>
         </bindings>
 
@@ -48,6 +53,13 @@
         <endpoint address="net.tcp://localhost:8091/DataAccessService"
           binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IChatService"
           contract="ChatService.IChatService" name="NetTcpBinding_IChatService">
+          <identity>
+            <userPrincipalName value="LUISMOGA\Luis Manuel" />
+          </identity>
+        </endpoint>
+        <endpoint address="net.tcp://localhost:8092/DataAccessService"
+          binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IPartidaService"
+          contract="PartidaService.IPartidaService" name="NetTcpBinding_IPartidaService">
           <identity>
             <userPrincipalName value="LUISMOGA\Luis Manuel" />
           </identity>
