--- a/Memorama_Project-master/Memorama.csproj
+++ b/Memorama_Project-master/Memorama.csproj
@@ -103,6 +103,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Connected Services\PartidaService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Languages\Resources.Designer.cs">
       <DependentUpon>Resources.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -120,6 +125,9 @@
     </Compile>
     <Compile Include="Model\JugadorSingleton.cs" />
     <Compile Include="Model\Correo.cs" />
+    <Compile Include="Pages\ConfiguracionPG.xaml.cs">
+      <DependentUpon>ConfiguracionPG.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\ConfirmarCuentaPG.xaml.cs">
       <DependentUpon>ConfirmarCuentaPG.xaml</DependentUpon>
     </Compile>
@@ -132,11 +140,20 @@
     <Compile Include="Pages\InicioPG.xaml.cs">
       <DependentUpon>InicioPG.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\RecuperarContrasenia2PG.xaml.cs">
+      <DependentUpon>RecuperarContrasenia2PG.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\RecuperarContraseniaPG.xaml.cs">
+      <DependentUpon>RecuperarContraseniaPG.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\RecuperarPassPg.xaml.cs">
       <DependentUpon>RecuperarPassPg.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\RegistroUsuarioPG.xaml.cs">
       <DependentUpon>RegistroUsuarioPG.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\UnirsePartidaPG.xaml.cs">
+      <DependentUpon>UnirsePartidaPG.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <DependentUpon>Resources.resx</DependentUpon>
@@ -168,6 +185,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\ConfiguracionPG.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\ConfirmarCuentaPG.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -184,11 +205,23 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\RecuperarContrasenia2PG.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Pages\RecuperarContraseniaPG.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\RecuperarPassPg.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\RegistroUsuarioPG.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\UnirsePartidaPG.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -259,6 +292,19 @@
     <None Include="Connected Services\DataAccessService\Memorama.DataAccessService.Jugador.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Connected Services\PartidaService\item.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\PartidaService\item1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\PartidaService\item2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\PartidaService\Memorama.PartidaService.Partida.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\PartidaService\PartidaService.wsdl" />
     <None Include="packages.config" />
     <None Include="Properties\DataSources\DataAccess.JugadorSet.datasource" />
     <None Include="Properties\Settings.settings">
@@ -281,6 +327,7 @@
   <ItemGroup>
     <WCFMetadataStorage Include="Connected Services\ChatService\" />
     <WCFMetadataStorage Include="Connected Services\DataAccessService\" />
+    <WCFMetadataStorage Include="Connected Services\PartidaService\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Connected Services\DataAccessService\item.disco" />
@@ -311,6 +358,22 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Bandera_EU.png" />
+    <Resource Include="Resources\Bandera_MX.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\PartidaService\item.disco" />
+    <None Include="Connected Services\PartidaService\configuration91.svcinfo" />
+    <None Include="Connected Services\PartidaService\configuration.svcinfo" />
+    <None Include="Connected Services\PartidaService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\song.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
